2005-11-04 Braden McDaniel  <braden@endoframe.com>

	* tests/browser.cpp (create_vrml_from_url):  Now that listeners
	aren't required to be nodes, the browser::create_vrml_from_url
	test can be modified to use a condition variable rather than a
	hackish sleep.

2005-11-04 Braden McDaniel  <braden@endoframe.com>

	Generate the antlr-generated sources as part of the build rather
	than storing them in the repository.  These changes should
	continue to include these generated files in release tarballs;
	so release tarball users will not need to have antlr installed.

	* configure.ac:  Call OV_PROG_ANTLR.
	* m4/antlr:  Added file.  OV_PROG_ANTLR macro.
	* src/libopenvrml/Makefile.am:  Added make rules to build the
	antlr-generated sources.
	* src/libopenvrml/openvrml/Vrml97Parser.cpp:  Removed file.
	* src/libopenvrml/openvrml/Vrml97Parser.hpp:  Removed file.
	* src/libopenvrml/openvrml/Vrml97ParserTokenTypes.hpp:  Removed
	file.
	* src/libopenvrml/openvrml/Vrml97ParserTokenTypes.txt:  Removed
	file.
	* src/libopenvrml/openvrml/X3DVrmlParser.cpp:  Removed file.
	* src/libopenvrml/openvrml/X3DVrmlParser.hpp:  Removed file.
	* src/libopenvrml/openvrml/X3DVrmlParserTokenTypes.hpp:  Removed
	file.
	* src/libopenvrml/openvrml/X3DVrmlParserTokenTypes.txt:  Removed
	file.

2005-11-03 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp
	(openvrml::browser::create_root_scope):  Removed helper class
	vrml97_node_interface_set_.  This class was probably rendered
	unnecessary when openvrml::node_interface_set was changed from
	a class to a typedef of an instance of std::set.

2005-11-03 Braden McDaniel  <braden@endoframe.com>

	Added std::swap specializations for sf* field_value types.

	* src/libopenvrml/openvrml/field_value.cpp
	* src/libopenvrml/openvrml/field_value.h

2005-11-02 Braden McDaniel  <braden@endoframe.com>

	Added bits missing for sfdouble, mfdouble, sfvec2d, mfvec2d,
	sfvec3d, and mfvec3d.
