@@ -1,5 +1,13 @@
 2005-11-04 Braden McDaniel  <braden@endoframe.com>
 
+	Removed conversions from double-precision floating point types
+	to single-precision ones.
+
+	* src/libopenvrml/openvrml/field_value.cpp
+	* src/libopenvrml/openvrml/field_value.h
+
+2005-11-04 Braden McDaniel  <braden@endoframe.com>
+
 	* tests/browser.cpp (create_vrml_from_url):  Now that listeners
 	aren't required to be nodes, the browser::create_vrml_from_url
 	test can be modified to use a condition variable rather than a
